ADDED CHANGES FOR AUTHENTICATE

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,7 @@ server.port = 8088
 
 #Need to SSL=False if not required
 server.ssl.enabled=false
+#connecting to cli-server
+cli-user=admin
+cli-password=foobar
+
